# research

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: action_recognition.hpp  classification.hpp  evaluation.hpp  iunj43u4.0df~  ml_openCV_recomp.hpp  precomp_openCV_recomp.hpp  svm_multiclass.hpp  visual_dictionary.hpp  visual_dictionary.hpp~RF5a7bf0.TMP
src/: action_recognition.cpp  classification.cpp  evaluation.cpp  main.cpp  svm.cpp  svm_multiclass.cpp  visual_dictionary.cpp
